# fastapi-telegram-mini-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  settings.py  setup.cfg
.github/workflows/: workflow.yml
db/: db_setup.py
db/models/: player_model.py
db/schemas/: common_schema.py  player_schema.py
etc/: dashboards.yaml
etc/dashboards/: fastapi-observability.json  postgresql-observability.json
etc/loki/: local-config.yaml
etc/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 2024-06-26-23-10-05_6b5dae2e4e11_init_migration.py
rabbitmq/: rabbitmq.conf
routers/: players.py
services/: player_service.py  redis_service.py
utils/: errors.py  helpers.py  pagination.py
